; ModuleID = '/home/carl/AnghaBench/rufus/src/libcdio/driver/extr_logging.c_cdio_logv.c'
source_filename = "/home/carl/AnghaBench/rufus/src/libcdio/driver/extr_logging.c_cdio_logv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cdio_logv.in_recursion = internal global i32 0, align 4
@cdio_loglevel_default = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i8*, i32)* @cdio_logv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cdio_logv(i64 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [1024 x i8], align 16
  store i64 %0, i64* %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = bitcast [1024 x i8]* %7 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %8, i8 0, i64 1024, i1 false)
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @cdio_loglevel_default, align 8
  %11 = icmp slt i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  br label %26

13:                                               ; preds = %3
  %14 = load i32, i32* @cdio_logv.in_recursion, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %13
  %17 = call i32 @assert(i32 0)
  br label %18

18:                                               ; preds = %16, %13
  store i32 1, i32* @cdio_logv.in_recursion, align 4
  %19 = getelementptr inbounds [1024 x i8], [1024 x i8]* %7, i64 0, i64 0
  %20 = load i8*, i8** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @vsnprintf(i8* %19, i32 1023, i8* %20, i32 %21)
  %23 = load i64, i64* %4, align 8
  %24 = getelementptr inbounds [1024 x i8], [1024 x i8]* %7, i64 0, i64 0
  %25 = call i32 @_handler(i64 %23, i8* %24)
  store i32 0, i32* @cdio_logv.in_recursion, align 4
  br label %26

26:                                               ; preds = %18, %12
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @assert(i32) #2

declare dso_local i32 @vsnprintf(i8*, i32, i8*, i32) #2

declare dso_local i32 @_handler(i64, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
